--- a/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-25-notes.md
+++ b/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-25-notes.md
@@ -58,6 +58,7 @@
 - **Deferred edge resolution**: Import/invoke/inherit edges need all nodes to exist first
 
 **Verification**:
+
 - ✅ `cargo check -p cds-index` passes
 
 ---
@@ -68,46 +69,52 @@
 
 **Work Completed**:
 
-1. **Enhanced Edge Types** (crates/cds-index/src/graph/mod.rs):
-   - Extended `GraphEdge` struct with `Option<String>` alias field
-   - Maintains lightweight contains edges (alias = None)
-   - Supports import edges with alias metadata (alias = Some("Engine"))
-   - Updated BFS traversal to use richer edge struct
+(1) **Enhanced Edge Types** (crates/cds-index/src/graph/mod.rs):
+
+- Extended `GraphEdge` struct with `Option<String>` alias field
+- Maintains lightweight contains edges (alias = None)
+- Supports import edges with alias metadata (alias = Some("Engine"))
+- Updated BFS traversal to use richer edge struct
 
 **Rationale**: LocAgent tracks import aliases for callee resolution. Example:
+
 ```python
 from service import Service as Engine
 # Later: engine = Engine()  <- needs alias lookup
 ```
 
-2. **Import Analysis Types** (crates/cds-index/src/graph/parser.rs):
-   - `ModuleSpecifier`: Represents import path (absolute or relative with level)
-   - `ImportDirective`: Complete import statement with alias
-   - `ImportEntity`: Individual entity from "from X import Y" statement
-   - `extract_import_directives()`: Single-pass import extraction
-   - Supports:
-     - `import os` → ModuleSpecifier("os", level=0)
-     - `from . import foo` → ModuleSpecifier("foo", level=1)
-     - `from pkg import Class as C` → alias="C"
-     - `from module import *` → wildcard=true
+(2) **Import Analysis Types** (crates/cds-index/src/graph/parser.rs):
 
-3. **Import Resolution Pipeline** (crates/cds-index/src/graph/builder.rs):
-   - `process_import_edges()` method (called after all nodes exist)
-   - Queues import directives during `walk_repository()`
-   - Resolves modules after directory walk finishes
-   - Resolution logic:
-     - **Relative imports**: Convert level (`.`, `..`) to repo-relative path
-     - **Absolute imports**: Direct module lookup
-     - **Entity imports**: Try `module/entity.py`, fallback to `module.py::Entity`
-     - **Wildcard imports**: Create edges to file only (no entity-level edges)
-   - `resolve_module_path()` helper:
-     - Handles `__init__.py` package detection
-     - Normalizes paths relative to repo root
-     - Supports level-based relative imports
+- `ModuleSpecifier`: Represents import path (absolute or relative with level)
+- `ImportDirective`: Complete import statement with alias
+- `ImportEntity`: Individual entity from "from X import Y" statement
+- `extract_import_directives()`: Single-pass import extraction
+- Supports:
+  - `import os` → ModuleSpecifier("os", level=0)
+  - `from . import foo` → ModuleSpecifier("foo", level=1)
+  - `from pkg import Class as C` → alias="C"
+  - `from module import *` → wildcard=true
 
-4. **Behavior Edge Placeholder**:
-   - Added `process_behavior_edges()` stub for invoke/inherit (Phase 4)
-   - Pipeline structure ready for next phase
+(3) **Import Resolution Pipeline** (crates/cds-index/src/graph/builder.rs):
+
+- `process_import_edges()` method (called after all nodes exist)
+- Queues import directives during `walk_repository()`
+- Resolves modules after directory walk finishes
+- Resolution logic:
+  - **Relative imports**: Convert level (`.`, `..`) to repo-relative path
+  - **Absolute imports**: Direct module lookup
+  - **Entity imports**: Try `module/entity.py`, fallback to `module.py::Entity`
+  - **Wildcard imports**: Create edges to file only (no entity-level edges)
+
+- `resolve_module_path()` helper:
+  - Handles `__init__.py` package detection
+  - Normalizes paths relative to repo root
+  - Supports level-based relative imports
+
+(4) **Behavior Edge Placeholder**:
+
+- Added `process_behavior_edges()` stub for invoke/inherit (Phase 4)
+- Pipeline structure ready for next phase
 
 **Key Decisions**:
 
@@ -117,6 +124,7 @@ from service import Service as Engine
 - **Fallback to entity nodes**: `from pkg import Class` tries `pkg/Class.py` first, then `pkg.py::Class`
 
 **Verification**:
+
 - ✅ `cargo check -p cds-index` passes
 - ✅ `cargo fmt` applied
 
@@ -191,6 +199,7 @@ from service import Service as Engine
 - **Async functions treated same as sync**: No special graph representation
 
 **Verification**:
+
 - ✅ `cargo check -p cds-index` passes
 - ✅ `cargo test -p cds-index graph_builder_tests -- --nocapture` passes (2/2 tests)
 - ⏳ Test coverage still low (~15% estimated)
@@ -226,6 +235,7 @@ fn generate_fqn(file_path: &str, entity_name: &str, parent_stack: &[String]) -> 
 ```
 
 **Key Points**:
+
 - Colon (`:`) separates file from entity
 - Dot (`.`) separates nested entities
 - Matches LocAgent format exactly for parity validation
@@ -275,6 +285,7 @@ fn resolve_import(
 ```
 
 **Edge Cases Handled**:
+
 - Relative imports with multiple levels (`..`, `...`)
 - Package imports with `__init__.py`
 - Wildcard imports (`from X import *`) - only file-level edge
@@ -343,6 +354,7 @@ for call in ast_calls {
 ```
 
 **Key Points**:
+
 - **Alias awareness**: `import Service as Engine` → callees["Engine"] = "service.py::Service"
 - **Fuzzy matching**: Handles `self.method()`, `obj.method()` calls
 - **Inheritance support**: Methods can call parent class methods
@@ -395,6 +407,7 @@ fn extract_entities_from_tree(tree: &Tree, source: &str) -> Vec<GraphNode> {
 ```
 
 **Advantages over hand-rolled parser**:
+
 - Handles all Python syntax (including Python 3.12 features)
 - Robust error recovery
 - Fast parsing (C implementation)
@@ -406,7 +419,7 @@ fn extract_entities_from_tree(tree: &Tree, source: &str) -> Vec<GraphNode> {
 
 ### Module Structure
 
-```text
+```tree
 crates/cds-index/src/graph/
 ├── mod.rs          (202 lines) - Public API, types, DependencyGraph wrapper
 ├── parser.rs       (426 lines) - Tree-sitter Python parsing, entity/import extraction
@@ -439,11 +452,13 @@ petgraph::Graph<GraphNode, GraphEdge, Directed>
 ### Performance Considerations
 
 **Current Implementation**:
+
 - **Single-threaded**: All parsing happens sequentially
 - **Full code loading**: Entire file read into memory per parse
 - **No caching**: AST parsed twice (entities + behavior edges)
 
 **Future Optimizations** (deferred to later):
+
 1. **Parallel file parsing** with rayon
 2. **Lazy code loading** (store file paths, load on-demand)
 3. **Memoized AST parsing** (cache parsed trees)
@@ -510,18 +525,22 @@ petgraph::Graph<GraphNode, GraphEdge, Directed>
 ## References
 
 **LocAgent Implementation**:
+
 - tmp/LocAgent/dependency_graph/build_graph.py (400+ lines)
 - tmp/LocAgent/dependency_graph/traverse_graph.py (graph traversal)
 
 **Parity Baselines**:
+
 - tests/fixtures/parity/golden_outputs/graph_*.json (6 repos)
 - tests/fixtures/parity/golden_outputs/README.md (baseline documentation)
 
 **PRD Requirements**:
+
 - spacs/prd/0.1.0-MVP-PRDs-v0/02-cds-index-service.md (FR-CG-1, FR-CG-2)
 - spacs/prd/0.1.0-MVP-PRDs-v0/06-rust-refactoring-plan.md (refactoring strategy)
 
 **Task Specifications**:
+
 - spacs/tasks/0.1.0-mvp/02-index-core/T-02-01-graph-builder.md (acceptance criteria)
 - spacs/issues/04-0.1.0-mvp/02-index-core/01-graph-build.md (technical breakdown)
 
