--- a/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-27-notes.md
+++ b/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-27-notes.md
@@ -9,7 +9,7 @@
 
 ### Architecture Decisions
 
-**Decision 1: Deferred Attribute Import Resolution**
+**Decision 1**: Deferred Attribute Import Resolution
 
 - **Rationale**: Cannot resolve `from pkg import Service` until `pkg/__init__.py` is fully parsed and we know it re-exports `Service` from `pkg.core`
 - **Implementation**: Queue `DeferredAttributeImport` structs during traversal, batch-resolve after all nodes exist
@@ -19,23 +19,25 @@
   - ⚠️ Con: Two-pass algorithm adds complexity
 - **Alternative Considered**: On-demand resolution during parsing (rejected due to ordering dependencies)
 
-**Decision 2: ModuleExports Model with Sources**
+**Decision 2**: ModuleExports Model with Sources
 
 - **Rationale**: Need to track both explicit names (`__all__ = ["A", "B"]`) and wildcard sources (`from .module import *`)
 - **Implementation**:
+
   ```rust
   struct ModuleExports {
       names: HashSet<String>,
       sources: Vec<ExportSource>,
   }
   ```
+
 - **Trade-offs**:
   - ✅ Pro: Supports chained re-exports (`__all__ = repo_ops.__all__`)
   - ✅ Pro: Clean separation between explicit and implicit exports
   - ⚠️ Con: Requires recursive resolution for aliased exports
 - **Alternative Considered**: Flatten all exports upfront (rejected - would lose provenance information)
 
-**Decision 3: Lazy Export Resolution Cache**
+**Decision 3**: Lazy Export Resolution Cache
 
 - **Rationale**: Avoid recomputing effective exports for every import statement
 - **Implementation**: `resolved_exports: HashMap<PathBuf, HashSet<String>>` cleared when modules add exports
@@ -75,6 +77,7 @@ impl ModuleExports {
 ```
 
 **Key Methods**:
+
 - `extract_module_exports(ast: &Mod) -> ModuleExports` - Parse `__all__` from AST
 - `compute_effective_exports(path: &PathBuf) -> HashSet<String>` - Resolve transitive exports
 - `merge(other)` - Combine multiple export declarations
@@ -100,6 +103,7 @@ struct BuilderState {
 ```
 
 **Resolution Algorithm**:
+
 1. During `process_import_from()`: If target is package, queue deferred import
 2. After all files indexed: Call `resolve_deferred_attribute_imports()`
 3. For each deferred import:
@@ -121,12 +125,14 @@ wildcard_imports: HashMap<PathBuf, Vec<PathBuf>>,
 ```
 
 **Strategy**:
+
 - Record `from pkg import *` in HashMap (don't create edges yet)
 - In `build_alias_map()`: Lazily fold wildcard-exposed names into name resolution
 - Only create import edges for *used* wildcard symbols (during invoke resolution)
 - Respects `__all__` constraints: only imports listed exports
 
 **Example**:
+
 ```python
 # pkg/__init__.py
 __all__ = ["Service"]
@@ -143,11 +149,13 @@ h = Hidden()     # ❌ Not in __all__, not available
 ### Dependencies
 
 **External Libraries**:
+
 - `rustpython_parser` v0.3.0 - Python AST parsing
 - `petgraph` v0.6 - Directed graph data structure
 - `serde` v1.0 - Serialization for parity JSON output
 
 **Internal Modules**:
+
 - `graph::parser` - AST traversal and entity extraction
 - `graph::types` - Node/edge type definitions (4 nodes, 4 edges)
 - `graph::traversal` - Graph queries (future: BFS/DFS for invoke resolution)
@@ -175,6 +183,7 @@ h = Hidden()     # ❌ Not in __all__, not available
 - **Answer**: Recursive resolution with cycle detection
 - **References**: `crates/cds-index/src/graph/builder.rs:480-520`
 - **Implementation**:
+
   ```rust
   fn compute_effective_exports(&mut self, path: &PathBuf) -> HashSet<String> {
       if let Some(cached) = self.resolved_exports.get(path) {
@@ -201,23 +210,25 @@ h = Hidden()     # ❌ Not in __all__, not available
 
 ### New Learnings
 
-**Learning 1: Python's Import Resolution is Non-Deterministic**
+**Learning 1**: Python's Import Resolution is Non-Deterministic
 
 In static analysis, we can't execute code to discover dynamic imports. Python's `sys.modules` cache and `importlib` hooks mean runtime imports can differ from static AST analysis. Our solution: Parse common patterns (`__all__`, `from ... import *`) and accept minor variance for dynamic cases.
 
-**Learning 2: Tree-sitter AST is More Detailed Than Expected**
+**Learning 2**: Tree-sitter AST is More Detailed Than Expected
 
 Initially thought `__all__ = ["A"]` would be a simple list assignment. Actual AST structure includes:
+
 - `ExprStmt` → `Assign` → `targets: [Name("__all__")]` → `value: List([Constant("A"), ...])`
 
 Need recursive traversal to handle:
+
 - `__all__ = ["A"] + ["B"]` (binary op)
 - `__all__ += ["C"]` (augmented assign)
 - `__all__ = module.__all__` (attribute access)
 
 **Reference**: `crates/cds-index/src/graph/builder.rs:330-410`
 
-**Learning 3: Parity Variance is Normal for Edge Cases**
+**Learning 3**: Parity Variance is Normal for Edge Cases
 
 LocAgent has 12 years of Python runtime optimizations and edge case handling. Achieving 0% variance on imports is exceptional; +1.9% variance on invokes (10 extra edges out of 531) is acceptable for MVP. Focus on correctness over perfection.
 
@@ -236,15 +247,16 @@ LocAgent has 12 years of Python runtime optimizations and edge case handling. Ac
 
 ### Refactoring Opportunities
 
-**Refactor 1: Extract `ModuleExports` to Separate Module**
+**Refactor 1**: Extract `ModuleExports` to Separate Module
 
 ModuleExports is now 200+ lines and could be `graph::exports`. Would improve separation of concerns and make testing easier.
 
 **Priority**: P1 (after M2 completion)
 
-**Refactor 2: Consolidate Alias Resolution Logic**
+**Refactor 2**: Consolidate Alias Resolution Logic
 
 Currently have:
+
 - `import_alias_caching()` for imports
 - `build_alias_map()` for invoke resolution
 - `find_export_target()` for re-exports
@@ -259,9 +271,11 @@ Could unify into single `AliasResolver` struct with consistent API.
 
 ### Test Cases
 
-**1. Test**: `import_edges_follow_package_reexports`
-   - **Scenario**: Package `__init__.py` re-exports class from submodule
-   - **Input**:
+(1) **Test**: `import_edges_follow_package_reexports`
+
+- **Scenario**: Package `__init__.py` re-exports class from submodule
+- **Input**:
+
      ```python
      # pkg/__init__.py
      from pkg.core import Service
@@ -270,13 +284,16 @@ Could unify into single `AliasResolver` struct with consistent API.
      # main.py
      from pkg import Service
      ```
-   - **Expected Output**: Import edge from `main.py` → `pkg/core.py::Service` (not `pkg/__init__.py`)
-   - **Status**: ✅ Pass
-   - **Assertion**: `assert!(import_edges.iter().any(|e| e.target_fqn.contains("pkg/core.py::Service")))`
 
-**2. Test**: `wildcard_imports_expand_all_exports`
-   - **Scenario**: `from pkg import *` respects `__all__` constraints
-   - **Input**:
+- **Expected Output**: Import edge from `main.py` → `pkg/core.py::Service` (not `pkg/__init__.py`)
+- **Status**: ✅ Pass
+- **Assertion**: `assert!(import_edges.iter().any(|e| e.target_fqn.contains("pkg/core.py::Service")))`
+
+(2) **Test**: `wildcard_imports_expand_all_exports`
+
+- **Scenario**: `from pkg import *` respects `__all__` constraints
+- **Input**:
+
      ```python
      # pkg/__init__.py
      __all__ = ["Service"]
@@ -288,13 +305,16 @@ Could unify into single `AliasResolver` struct with consistent API.
      svc = Service()  # Should resolve
      h = Hidden()     # Should NOT resolve
      ```
-   - **Expected Output**: Import edge for `Service`, no edge for `Hidden`
-   - **Status**: ✅ Pass
-   - **Validation**: Only `Service` appears in import edges
 
-**3. Test**: `exports_follow_module_all_aliases`
-   - **Scenario**: Chained `__all__` via module alias
-   - **Input**:
+- **Expected Output**: Import edge for `Service`, no edge for `Hidden`
+- **Status**: ✅ Pass
+- **Validation**: Only `Service` appears in import edges
+
+(3) **Test**: `exports_follow_module_all_aliases`
+
+- **Scenario**: Chained `__all__` via module alias
+- **Input**:
+
      ```python
      # pkg/repo_ops.py
      __all__ = ["run"]
@@ -307,9 +327,10 @@ Could unify into single `AliasResolver` struct with consistent API.
      # main.py
      from pkg import run
      ```
-   - **Expected Output**: Import edge from `main.py` → `pkg/repo_ops.py::run`
-   - **Status**: ✅ Pass
-   - **Complexity**: Tests recursive export resolution
+
+- **Expected Output**: Import edge from `main.py` → `pkg/repo_ops.py::run`
+- **Status**: ✅ Pass
+- **Complexity**: Tests recursive export resolution
 
 ---
 
@@ -333,6 +354,7 @@ test result: ok. 6 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 **Target**: >80% by Day 5
 
 **Missing Test Cases**:
+
 - Circular import detection
 - Malformed `__all__` (non-list values)
 - Deeply nested re-exports (>3 levels)
@@ -361,9 +383,10 @@ sys     0m0.152s
 
 ### Optimization Ideas
 
-**Idea 1: Parallel File Processing**
+**Idea 1**: Parallel File Processing
 
 Currently sequential file traversal. Could use `rayon` to parse files in parallel:
+
 ```rust
 files.par_iter().map(|f| parse_file(f)).collect()
 ```
@@ -371,9 +394,10 @@ files.par_iter().map(|f| parse_file(f)).collect()
 **Estimated Speedup**: 3-4x on 8-core systems
 **Priority**: P1 (M5 optimization)
 
-**Idea 2: Incremental Graph Updates**
+**Idea 2**: Incremental Graph Updates
 
 For file changes, only reparse changed modules and update affected edges. Would require:
+
 - File hash tracking
 - Dependency invalidation logic
 - Delta updates to graph
@@ -434,24 +458,28 @@ None - this is additive functionality that improves correctness without changing
 ## References
 
 **Specifications**:
+
 - **PRD**: `spacs/prd/0.1.0-MVP-PRDs-v0/02-cds-index-service.md` (Section 3.1: Graph Construction)
 - **Issue**: `spacs/issues/04-0.1.0-mvp/02-index-core/01-graph-build.md`
 - **Task**: `spacs/tasks/0.1.0-mvp/02-index-core/T-02-01-graph-builder.md`
 
 **LocAgent Reference Implementation**:
+
 - **Python Graph Builder**: `tmp/LocAgent/dependency_graph/build_graph.py`
 - **Import Resolution**: Lines 520-560 (`_find_import_target()`)
 - **Export Discovery**: Lines 410-480 (`_extract_module_attrs()`)
 
 **Parity Methodology**:
+
 - **Validation Framework**: `docs/parity-validation-methodology.md`
 - **Golden Baselines**: `tests/fixtures/parity/golden_outputs/graph_*.json`
 - **Harness**: `crates/cds-index/tests/graph_parity_tests.rs`
 
 **External Documentation**:
-- **Python Import System**: https://docs.python.org/3/reference/import.html
-- **Tree-sitter Python**: https://github.com/tree-sitter/tree-sitter-python
-- **Petgraph**: https://docs.rs/petgraph/latest/petgraph/
+
+- **Python Import System**: <https://docs.python.org/3/reference/import.html>
+- **Tree-sitter Python**: <https://github.com/tree-sitter/tree-sitter-python>
+- **Petgraph**: <https://docs.rs/petgraph/latest/petgraph/>
 
 ---
 
